# MNIST-digit-classifier-cpp

./: .gitignore  C++.txt  LICENSE  README..md  README.md
backend/: CMakeLists.txt  main.cpp
backend/api/: api_server.cpp  api_server.h
backend/app/: predictor.cpp  predictor.h  trainer.cpp  trainer.h
backend/io/: dataset_utils.cpp  dataset_utils.h  mnist_reader.cpp  mnist_reader.h  weights_io.cpp  weights_io.h
backend/math/: matrix.cpp  matrix.h
backend/nn/: activations.cpp  activations.h  layer.cpp  layer.h  loss.cpp  loss.h  neural_network.cpp  neural_network.h
frontend/: app.js  index.html  style.css
pretrained/: mnist_model.txt
